# prime-brief

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py  email_agent.py  researcher.py  summarizer.py
app/config/: __init__.py  settings.py
app/services/: __init__.py  crew_service.py
app/tasks/: __init__.py  research_tasks.py
app/tools/: __init__.py  email_tool.py  search_tool.py
app/ui/: __init__.py  components.py  styles.py
app/utils/: __init__.py  logger.py  validators.py
